Fix side navigation and hover detection issues - Add side navigation with static HTML items - Fix hover detection stopping on right side by expanding hover area - Remove overflow hidden from tile__fig - Expand slideshow-list__el max-width to 600px - Disable dynamic navigation building to prevent duplicates

--- a/src/sass/blocks/_tile.scss
+++ b/src/sass/blocks/_tile.scss
@@ -20,7 +20,7 @@
     display: block;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 20rem;
     width: 120%;
     height: 100%;
     object-fit: none;
@@ -37,7 +37,7 @@
 .tile__content {
     position: absolute;
     top: 1rem;
-    left: -20rem;
+    left: 2rem;
     width: 100%;
     font-size: 16px;
     font-family: 'Source Serif 4', serif;
@@ -56,7 +56,7 @@
 
 
 .tile__title {
-    margin-left: 10%;
+    margin-left: 30%;
     color: #EDEDED;
 
     white-space: nowrap;
